--- a/.devcontainer/ubuntu_20.04/devcontainer.json
+++ b/.devcontainer/ubuntu_20.04/devcontainer.json
@@ -1,7 +1,7 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/ubuntu
 {
-	"name": "Ubuntu",
+	"name": "ubuntu:20.04-LLVM:12",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	// "image": "mcr.microsoft.com/devcontainers/base:focal",
 	"build": {
@@ -14,9 +14,15 @@
 		"ghcr.io/devcontainers/features/python": {
 			"version": "3.11"
 		}
-	}
+	},
 	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "uname -a",
+	"postCreateCommand": "infrastructure/devcontainer_post_create.sh 12",
 	// Configure tool-specific properties.
-	// "customizations": {},
+	"customizations": {
+		"vscode": {
+			"extensions": [
+				"ms-vscode.cmake-tools"
+			]
+		}
+	}
 }
