--- a/.devcontainer/ubuntu_20.04/Dockerfile
+++ b/.devcontainer/ubuntu_20.04/Dockerfile
@@ -1,10 +1,10 @@
 FROM ubuntu:20.04
 
 RUN apt-get update
-RUN apt-get install -y vim wget ninja-build \
+RUN DEBIAN_FRONTEND=noninteractive apt-get install -y vim wget ninja-build \
   libz-dev sqlite3 libsqlite3-dev \
   ncurses-dev libstdc++6 \
   binutils liblzma-dev \
   cmake
-RUN llvm-12-dev libclang-12-dev libc++-12-dev \
+RUN DEBIAN_FRONTEND=noninteractive apt-get install -y llvm-12-dev libclang-12-dev libc++-12-dev \
   libc++abi-12-dev clang-12
