--- a/.devcontainer/ubuntu_20.04/devcontainer.json
+++ b/.devcontainer/ubuntu_20.04/devcontainer.json
@@ -14,7 +14,8 @@
 	"customizations": {
 		"vscode": {
 			"extensions": [
-				"ms-vscode.cmake-tools"
+				"ms-vscode.cmake-tools",
+				"ms-vscode.cpptools"
 			]
 		}
 	}
