Add preset generation for ubuntu

--- a/.devcontainer/ubuntu_20.04/devcontainer.json
+++ b/.devcontainer/ubuntu_20.04/devcontainer.json
@@ -21,7 +21,8 @@
 		"vscode": {
 			"extensions": [
 				"ms-vscode.cmake-tools",
-				"ms-vscode.cpptools"
+				"ms-vscode.cpptools",
+				"imgildev.vscode-mustache-snippets"
 			]
 		}
 	}
