--- a/.devcontainer/ubuntu_20.04_12/Dockerfile
+++ b/.devcontainer/ubuntu_20.04_12/Dockerfile
@@ -6,7 +6,9 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get install -y vim wget ninja-build \
   ncurses-dev libstdc++6 \
   binutils liblzma-dev \
   openssh-client
-RUN DEBIAN_FRONTEND=noninteractive apt-get install -y llvm-12-dev libclang-12-dev libc++-12-dev \
-  libc++abi-12-dev clang-12
-
-RUN pip install -r requirements.txt
+RUN DEBIAN_FRONTEND=noninteractive apt-get install -y \
+  llvm-12-dev \
+  libclang-12-dev \
+  libc++-12-dev \
+  libc++abi-12-dev \
+  clang-12
