--- a/actions/detect-package-metadata/action.yml
+++ b/actions/detect-package-metadata/action.yml
@@ -21,7 +21,7 @@ runs:
         case $GITHUB_EVENT_NAME in
           "pull_request")
             echo "suffix=-pr$(grep -Eo "\"number\": [0-9]+" $GITHUB_EVENT_PATH | awk ' { print $2; exit } ')" >> $GITHUB_OUTPUT
-            echo "channel=nightly" >> $GITHUB_OUTPUT
+            echo "channel=testing" >> $GITHUB_OUTPUT
           ;;
           "push")
             case $GITHUB_REF in
