--- a/actions/detect-package-metadata/action.yml
+++ b/actions/detect-package-metadata/action.yml
@@ -13,6 +13,10 @@ outputs:
 runs:
   using: "composite"
   steps:
+    - name: Debug
+      shell: bash
+      run: |
+        env | sort
     - id: metadata
       name: Detect version and release channel
       shell: bash
@@ -20,17 +24,17 @@ runs:
         echo "version=$(grep -Eo "MULL_VERSION [0-9.]+" CMakeLists.txt | awk ' { print $2 } ')" >> $GITHUB_OUTPUT
         case $GITHUB_EVENT_NAME in
           "pull_request")
-            echo "suffix=-pr$(grep -Eo "\"number\": [0-9]+" $GITHUB_EVENT_PATH | awk ' { print $2; exit } ')" >> $GITHUB_OUTPUT
+            echo "version-suffix=-pr$(grep -Eo "\"number\": [0-9]+" $GITHUB_EVENT_PATH | awk ' { print $2; exit } ')" >> $GITHUB_OUTPUT
             echo "channel=testing" >> $GITHUB_OUTPUT
           ;;
           "push")
             case $GITHUB_REF in
               "refs/heads/"*)
-                echo "suffix=-trunk(git rev-list HEAD --count)" >> $GITHUB_OUTPUT
+                echo "version-suffix=-trunk(git rev-list HEAD --count)" >> $GITHUB_OUTPUT
                 echo "channel=nightly" >> $GITHUB_OUTPUT
               ;;
               "refs/tags/"*)
-                echo "suffix=" >> $GITHUB_OUTPUT
+                echo "version-suffix=" >> $GITHUB_OUTPUT
                 echo "channel=stable" >> $GITHUB_OUTPUT
                 if [ `echo $GITHUB_REF | awk -F/ ' { print $3 } '` != `grep -Eo "MULL_VERSION [0-9.]+" CMakeLists.txt | awk ' { print $2 } '` ];
                 then
