--- a/actions/detect-package-metadata/action.yml
+++ b/actions/detect-package-metadata/action.yml
@@ -4,7 +4,7 @@ outputs:
   version:
     description: "version"
     value: ${{ steps.metadata.outputs.version }}
-  version-suffix:
+  suffix:
     description: "version suffix"
     value: ${{ steps.metadata.outputs.suffix }}
   channel:
@@ -24,17 +24,17 @@ runs:
         echo "version=$(grep -Eo "MULL_VERSION [0-9.]+" CMakeLists.txt | awk ' { print $2 } ')" >> $GITHUB_OUTPUT
         case $GITHUB_EVENT_NAME in
           "pull_request")
-            echo "version-suffix=-pr$(grep -Eo "\"number\": [0-9]+" $GITHUB_EVENT_PATH | awk ' { print $2; exit } ')" >> $GITHUB_OUTPUT
+            echo "suffix=-pr$(grep -Eo "\"number\": [0-9]+" $GITHUB_EVENT_PATH | awk ' { print $2; exit } ')" >> $GITHUB_OUTPUT
             echo "channel=testing" >> $GITHUB_OUTPUT
           ;;
           "push")
             case $GITHUB_REF in
               "refs/heads/"*)
-                echo "version-suffix=-trunk(git rev-list HEAD --count)" >> $GITHUB_OUTPUT
+                echo "suffix=-trunk(git rev-list HEAD --count)" >> $GITHUB_OUTPUT
                 echo "channel=nightly" >> $GITHUB_OUTPUT
               ;;
               "refs/tags/"*)
-                echo "version-suffix=" >> $GITHUB_OUTPUT
+                echo "suffix=" >> $GITHUB_OUTPUT
                 echo "channel=stable" >> $GITHUB_OUTPUT
                 if [ `echo $GITHUB_REF | awk -F/ ' { print $3 } '` != `grep -Eo "MULL_VERSION [0-9.]+" CMakeLists.txt | awk ' { print $2 } '` ];
                 then
