--- a/.github/workflows/ci-ubuntu.yml
+++ b/.github/workflows/ci-ubuntu.yml
@@ -17,23 +17,31 @@ jobs:
     strategy:
       matrix:
         include:
-          - OS_VERSION: "20.04"
+          - OS_NAME: "ubuntu"
+            OS_VERSION: "20.04"
             LLVM_VERSION: 12
-          - OS_VERSION: "22.04"
+          - OS_NAME: "ubuntu"
+            OS_VERSION: "22.04"
             LLVM_VERSION: 13
-          - OS_VERSION: "22.04"
+          - OS_NAME: "ubuntu"
+            OS_VERSION: "22.04"
             LLVM_VERSION: 14
-          - OS_VERSION: "22.04"
+          - OS_NAME: "ubuntu"
+            OS_VERSION: "22.04"
             LLVM_VERSION: 15
-          - OS_VERSION: "24.04"
+          - OS_NAME: "ubuntu"
+            OS_VERSION: "24.04"
             LLVM_VERSION: 14
-          - OS_VERSION: "24.04"
+          - OS_NAME: "ubuntu"
+            OS_VERSION: "24.04"
             LLVM_VERSION: 15
-          - OS_VERSION: "24.04"
+          - OS_NAME: "ubuntu"
+            OS_VERSION: "24.04"
             LLVM_VERSION: 16
-          - OS_VERSION: "24.04"
+          - OS_NAME: "ubuntu"
+            OS_VERSION: "24.04"
             LLVM_VERSION: 17
-    name: Ubuntu ${{ matrix.OS_VERSION }} - LLVM ${{ matrix.LLVM_VERSION }}
+    name: ${{ matrix.OS_NAME }} ${{ matrix.OS_VERSION }} - LLVM ${{ matrix.LLVM_VERSION }}
     steps:
       - uses: actions/checkout@v4
       - uses: ./actions/detect-package-metadata
@@ -46,8 +54,8 @@ jobs:
       - name: Build, test, package
         uses: devcontainers/ci@v0.3
         with:
-          imageName: ghcr.io/mull-project/internal-linux-ci
-          configFile: ./.devcontainer/ubuntu_${{ matrix.OS_VERSION }}_${{ matrix.LLVM_VERSION }}/devcontainer.json
+          imageName: ghcr.io/mull-project/internal-${{ matrix.OS_NAME }}_${{ matrix.OS_VERSION }}_${{ matrix.LLVM_VERSION }}-ci
+          configFile: ./.devcontainer/${{ matrix.OS_NAME }}_${{ matrix.OS_VERSION }}_${{ matrix.LLVM_VERSION }}/devcontainer.json
           push: always # TODO: remove
           runCmd: |
             cmake --preset mull -DMULL_VERSION=${{ steps.metadata.outputs.version }}${{ steps.metadata.outputs.suffix }}
@@ -59,13 +67,13 @@ jobs:
         uses: devcontainers/ci@v0.3
         if: env.CLOUDSMITH_API_KEY != null
         with:
-          imageName: ghcr.io/mull-project/internal-linux-ci
-          configFile: ./.devcontainer/ubuntu_${{ matrix.OS_VERSION }}_${{ matrix.LLVM_VERSION }}/devcontainer.json
+          imageName: ghcr.io/mull-project/internal-${{ matrix.OS_NAME }}_${{ matrix.OS_VERSION }}_${{ matrix.LLVM_VERSION }}-ci
+          configFile: ./.devcontainer/${{ matrix.OS_NAME }}_${{ matrix.OS_VERSION }}_${{ matrix.LLVM_VERSION }}/devcontainer.json
           push: never
           runCmd: |
             UBUNTU_CODENAME=$(. /etc/os-release; echo "${UBUNTU_CODENAME/*, /}")
             env CLOUDSMITH_API_KEY=${{ secrets.CLOUDSMITH_API_KEY }} cloudsmith push deb \
-              mull-project/mull-${{ steps.metadata.outputs.channel }}/ubuntu/${UBUNTU_CODENAME} \
+              mull-project/mull-${{ steps.metadata.outputs.channel }}/${{ matrix.OS_NAME }}/${UBUNTU_CODENAME} \
               build.dir/*.deb
 
       - name: Move package
