--- a/.github/workflows/ci-macos.yml
+++ b/.github/workflows/ci-macos.yml
@@ -5,12 +5,10 @@ env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 on:
-  # pull_request:
+  pull_request:
   push:
-    branches:
-      - main
-    tags:
-      - "**"
+    branches: ["main"]
+    tags: ["**"]
 
 jobs:
   macos:
