--- a/.devcontainer/ubuntu_20.04_12/devcontainer.json
+++ b/.devcontainer/ubuntu_20.04_12/devcontainer.json
@@ -16,7 +16,7 @@
 			"version": "3.31.1"
 		}
 	},
-	"postCreateCommand": "infrastructure/devcontainer_post_create.sh 12",
+	"postCreateCommand": "infrastructure/devcontainer_post_create.sh ubuntu 12",
 	"customizations": {
 		"vscode": {
 			"extensions": [
