--- a/.devcontainer/ubuntu_22.04_13/devcontainer.json
+++ b/.devcontainer/ubuntu_22.04_13/devcontainer.json
@@ -16,7 +16,7 @@
 			"version": "3.31.1"
 		}
 	},
-	"postCreateCommand": "infrastructure/devcontainer_post_create.sh 13",
+	"postCreateCommand": "infrastructure/devcontainer_post_create.sh ubuntu 13",
 	"customizations": {
 		"vscode": {
 			"extensions": [
