--- a/.devcontainer/ubuntu_22.04_14/devcontainer.json
+++ b/.devcontainer/ubuntu_22.04_14/devcontainer.json
@@ -16,7 +16,7 @@
 			"version": "3.31.1"
 		}
 	},
-	"postCreateCommand": "infrastructure/devcontainer_post_create.sh 14",
+	"postCreateCommand": "infrastructure/devcontainer_post_create.sh ubuntu 14",
 	"customizations": {
 		"vscode": {
 			"extensions": [
