--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -70,3 +70,7 @@ set_target_properties(mull-tests PROPERTIES
   )
 get_property(dependencies GLOBAL PROPERTY TEST_FIXTURES_DEPENDENCIES)
 add_dependencies(mull-tests ${dependencies})
+
+add_custom_target(run-unit-tests
+  COMMAND $<TARGET_FILE:mull-tests>
+)
