--- a/.github/workflows/ci-macos.yml
+++ b/.github/workflows/ci-macos.yml
@@ -7,10 +7,8 @@ env:
 on:
   pull_request:
   push:
-    branches:
-      - main
-    tags:
-      - "**"
+    branches: ["main"]
+    tags: ["**"]
 
 jobs:
   macos:
@@ -18,7 +16,7 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        LLVM_VERSION: [12, 13, 14, 16]
+        LLVM_VERSION: [13, 14, 15, 16, 17]
 
     steps:
       - name: Debugging
