--- a/tests/unit/fixtures/mutation_filters/file_path/CMakeLists.txt
+++ b/tests/unit/fixtures/mutation_filters/file_path/CMakeLists.txt
@@ -1,5 +1,9 @@
 compile_fixture(
-  INPUT ${CMAKE_CURRENT_SOURCE_DIR}/some_test_file_name.c
-  OUTPUT_EXTENSION bc
-  FLAGS -c -emit-llvm -g
-)
+  INPUT
+  ${CMAKE_CURRENT_SOURCE_DIR}/some_test_file_name.c
+  OUTPUT_EXTENSION
+  bc
+  FLAGS
+  -c
+  -emit-llvm
+  -g)
