--- a/tests/unit/fixtures/mutation_filters/no_debug_filter/CMakeLists.txt
+++ b/tests/unit/fixtures/mutation_filters/no_debug_filter/CMakeLists.txt
@@ -1,11 +1,18 @@
 compile_fixture(
-  INPUT ${CMAKE_CURRENT_SOURCE_DIR}/with_debug.c
-  OUTPUT_EXTENSION bc
-  FLAGS -c -emit-llvm -g
-)
+  INPUT
+  ${CMAKE_CURRENT_SOURCE_DIR}/with_debug.c
+  OUTPUT_EXTENSION
+  bc
+  FLAGS
+  -c
+  -emit-llvm
+  -g)
 
 compile_fixture(
-  INPUT ${CMAKE_CURRENT_SOURCE_DIR}/without_debug.c
-  OUTPUT_EXTENSION bc
-  FLAGS -c -emit-llvm
-)
+  INPUT
+  ${CMAKE_CURRENT_SOURCE_DIR}/without_debug.c
+  OUTPUT_EXTENSION
+  bc
+  FLAGS
+  -c
+  -emit-llvm)
