--- a/tests/unit/fixtures/mutators/bitwise/CMakeLists.txt
+++ b/tests/unit/fixtures/mutators/bitwise/CMakeLists.txt
@@ -1,10 +1,18 @@
 compile_fixture(
-  INPUT ${CMAKE_CURRENT_LIST_DIR}/shifts.cpp
-  OUTPUT_EXTENSION bc
-  FLAGS -g -c -emit-llvm
-)
+  INPUT
+  ${CMAKE_CURRENT_LIST_DIR}/shifts.cpp
+  OUTPUT_EXTENSION
+  bc
+  FLAGS
+  -g
+  -c
+  -emit-llvm)
 compile_fixture(
-  INPUT ${CMAKE_CURRENT_LIST_DIR}/bitops.cpp
-  OUTPUT_EXTENSION bc
-  FLAGS -g -c -emit-llvm
-)
+  INPUT
+  ${CMAKE_CURRENT_LIST_DIR}/bitops.cpp
+  OUTPUT_EXTENSION
+  bc
+  FLAGS
+  -g
+  -c
+  -emit-llvm)
