--- a/tests/unit/fixtures/mutators/math/CMakeLists.txt
+++ b/tests/unit/fixtures/mutators/math/CMakeLists.txt
@@ -1,11 +1,19 @@
 compile_fixture(
-  INPUT ${CMAKE_CURRENT_LIST_DIR}/bitwise_not.cpp
-  OUTPUT_EXTENSION bc
-  FLAGS -g -c -emit-llvm
-)
+  INPUT
+  ${CMAKE_CURRENT_LIST_DIR}/bitwise_not.cpp
+  OUTPUT_EXTENSION
+  bc
+  FLAGS
+  -g
+  -c
+  -emit-llvm)
 
 compile_fixture(
-  INPUT ${CMAKE_CURRENT_LIST_DIR}/unary_minus.cpp
-  OUTPUT_EXTENSION bc
-  FLAGS -g -c -emit-llvm
-)
+  INPUT
+  ${CMAKE_CURRENT_LIST_DIR}/unary_minus.cpp
+  OUTPUT_EXTENSION
+  bc
+  FLAGS
+  -g
+  -c
+  -emit-llvm)
