--- a/tests/unit/fixtures/mutators/remove_negation/CMakeLists.txt
+++ b/tests/unit/fixtures/mutators/remove_negation/CMakeLists.txt
@@ -1,5 +1,9 @@
 compile_fixture(
-  INPUT ${CMAKE_CURRENT_LIST_DIR}/main.c
-  OUTPUT_EXTENSION bc
-  FLAGS -g -c -emit-llvm
-)
+  INPUT
+  ${CMAKE_CURRENT_LIST_DIR}/main.c
+  OUTPUT_EXTENSION
+  bc
+  FLAGS
+  -g
+  -c
+  -emit-llvm)
