--- a/tests/unit/fixtures/mutators/remove_void_function/CMakeLists.txt
+++ b/tests/unit/fixtures/mutators/remove_void_function/CMakeLists.txt
@@ -1,5 +1,10 @@
 compile_fixture(
-  INPUT ${CMAKE_CURRENT_LIST_DIR}/junk.cpp
-  OUTPUT_EXTENSION bc
-  FLAGS -g -c -emit-llvm -I${CMAKE_CURRENT_LIST_DIR}
-)
+  INPUT
+  ${CMAKE_CURRENT_LIST_DIR}/junk.cpp
+  OUTPUT_EXTENSION
+  bc
+  FLAGS
+  -g
+  -c
+  -emit-llvm
+  -I${CMAKE_CURRENT_LIST_DIR})
