--- a/tests/unit/fixtures/mutators/scalar_value/CMakeLists.txt
+++ b/tests/unit/fixtures/mutators/scalar_value/CMakeLists.txt
@@ -1,11 +1,18 @@
 compile_fixture(
-  INPUT ${CMAKE_CURRENT_LIST_DIR}/module.c
-  OUTPUT_EXTENSION bc
-  FLAGS -c -emit-llvm
-)
+  INPUT
+  ${CMAKE_CURRENT_LIST_DIR}/module.c
+  OUTPUT_EXTENSION
+  bc
+  FLAGS
+  -c
+  -emit-llvm)
 
 compile_fixture(
-  INPUT ${CMAKE_CURRENT_LIST_DIR}/junk.cpp
-  OUTPUT_EXTENSION bc
-  FLAGS -g -c -emit-llvm
-)
+  INPUT
+  ${CMAKE_CURRENT_LIST_DIR}/junk.cpp
+  OUTPUT_EXTENSION
+  bc
+  FLAGS
+  -g
+  -c
+  -emit-llvm)
