--- a/tests/unit/fixtures/simple_test/count_letters/CMakeLists.txt
+++ b/tests/unit/fixtures/simple_test/count_letters/CMakeLists.txt
@@ -1,12 +1,14 @@
-set (SOURCES
-  ${CMAKE_CURRENT_LIST_DIR}/test_count_letters.c
-  ${CMAKE_CURRENT_LIST_DIR}/count_letters.c
-)
+set(SOURCES ${CMAKE_CURRENT_LIST_DIR}/test_count_letters.c
+            ${CMAKE_CURRENT_LIST_DIR}/count_letters.c)
 
 foreach(source ${SOURCES})
   compile_fixture(
-    INPUT ${source}
-    OUTPUT_EXTENSION bc
-    FLAGS -g -c -emit-llvm
-  )
+    INPUT
+    ${source}
+    OUTPUT_EXTENSION
+    bc
+    FLAGS
+    -g
+    -c
+    -emit-llvm)
 endforeach()
