--- a/tests/integration/lit.cfg
+++ b/tests/integration/lit.cfg
@@ -28,6 +28,7 @@ clang_cc = os.environ.get('clang_cc', '')
 clang_cxx = os.environ.get('clang_cxx', '')
 llvm_profdata = os.environ.get('llvm_profdata', '')
 mull_runner = os.environ.get('mull_runner', '')
+mull_reporter = os.environ.get('mull_reporter', '')
 mull_frontend_cxx = os.environ.get('mull_frontend_cxx', '')
 mull_ir_frontend = os.environ.get('mull_ir_frontend', '')
 filecheck = os.environ.get('filecheck', '')
@@ -46,6 +47,7 @@ config.substitutions.append(('%clang_cxx', clang_cxx))
 config.substitutions.append(('%sysroot', os.environ.get('sysroot', '')))
 config.substitutions.append(('%llvm_profdata', llvm_profdata))
 config.substitutions.append(('%mull_runner', mull_runner))
+config.substitutions.append(('%mull_reporter', mull_reporter))
 config.substitutions.append(('%mull_frontend_cxx', mull_frontend_cxx))
 config.substitutions.append(('%mull_ir_frontend', mull_ir_frontend))
 config.substitutions.append(('%filecheck', filecheck))
