--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -2,3 +2,4 @@
 add_subdirectory(mull-cxx-frontend)
 add_subdirectory(mull-ir-frontend)
 add_subdirectory(mull-runner)
+add_subdirectory(mull-reporter)
