Do not cache apt update

--- a/.devcontainer/ubuntu_24.04_17/Dockerfile
+++ b/.devcontainer/ubuntu_24.04_17/Dockerfile
@@ -1,12 +1,12 @@
 FROM ubuntu:24.04
 
-RUN apt-get update
-RUN DEBIAN_FRONTEND=noninteractive apt-get install -y vim wget ninja-build \
+RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
+  vim wget ninja-build \
   libz-dev sqlite3 libsqlite3-dev \
   ncurses-dev libstdc++6 \
   binutils liblzma-dev \
   openssh-client
-RUN DEBIAN_FRONTEND=noninteractive apt-get install -y \
+RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
   llvm-17-dev \
   libclang-17-dev \
   libc++-17-dev \
